GNOME Bugzilla – Bug 684490
user accounts: reloading fails
Last modified: 2012-09-21 07:21:57 UTC
Click the avatar in the user menu. User panel comes up and the user list is populated. Click the avatar again. Now the user list is empty :-(
Created attachment 224852 [details] [review] shell: Rename current_panel to current_panel_box So that we can use current_panel for the current panel, not for the container parent of the panel.
Created attachment 224853 [details] [review] shell: Fix reloading existing panel The panel needs to be destroyed and disposed of properly first, otherwise bizarre problems will start occuring.
Created attachment 224854 [details] [review] shell: Reuse existing panels when activated again Instead of destroying and recreating the panel, we'll reuse the panel, and set the new argv (usually to switch pages).
Created attachment 224855 [details] [review] shell: Pass args to existing panels When re-activating the same panel, we could destroy and recreate the panel, or better reuse the panel, and set the new argv (usually to switch pages).
For GNOME 3.6, we can either go for: - attachment 224853 [details] [review] before 3.6 - attachment 224854 [details] [review] after 3.6 or easier: attachment 224855 [details] [review] before 3.6. For both, the sed job in attachment 224852 [details] [review] needs to go in.
(In reply to comment #5) > For GNOME 3.6, we can either go for: > - attachment 224853 [details] [review] before 3.6 > - attachment 224854 [details] [review] after 3.6 > > or easier: > attachment 224855 [details] [review] before 3.6. > > For both, the sed job in attachment 224852 [details] [review] needs to go in. The 'easier' patch looks less scary to me.
(In reply to comment #6) > The 'easier' patch looks less scary to me. Let's do that then.
Attachment 224852 [details] pushed as ab435aa - shell: Rename current_panel to current_panel_box Attachment 224855 [details] pushed as 876d41b - shell: Pass args to existing panels
Created attachment 224897 [details] big gray rectangle It doesn't fix the issue completely, some times I get a dark gray rectangle instead of the menu content. (see screenshot).
Oops, wrong bug, meant that for bug 681676.