shell: Rename current_panel to current_panel_box

So that we can use current_panel for the current panel, not
for the container parent of the panel.

https://bugzilla.gnome.org/show_bug.cgi?id=684490